--- a/style.css
+++ b/style.css
@@ -13,3 +13,5 @@ background-color: darkblue;
 .figure{
     background-color: yellow;
 }
+
+// Misschien meer styling toevoegen voor je figures? (tip) game ziet er nice uit.
