--- a/style.css
+++ b/style.css
@@ -14,4 +14,4 @@ background-color: darkblue;
     background-color: yellow;
 }
 
-// Misschien meer styling toevoegen voor je figures? (tip) game ziet er nice uit.
+// Misschien meer styling toevoegen voor je figures? (tip) game ziet er nice uit. (A)
